@@ -281,6 +281,10 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP236   (EXPERIMENTAL)(*2)
        Canon PIXMA MP237   (EXPERIMENTAL)(*2)
 
+       Canon MP240 series  (EXPERIMENTAL)
+       Canon PIXMA MP240   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP245   (EXPERIMENTAL)(*2)
+
        Canon MP250 series  (EXPERIMENTAL)
        Canon PIXMA MP250   (EXPERIMENTAL)(*2)
        Canon PIXMA MP252   (EXPERIMENTAL)(*2)
